peer review feedback

--- a/downstream/modules/platform/proc-gs-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/platform/proc-gs-eda-set-up-rulebook-activation.adoc
@@ -22,13 +22,19 @@
 * *Rulebook*: Rulebooks are displayed according to the project you selected.
 * *Credential*: Select 0 or more credentials for this rulebook activation. This field is optional.
 +
-NOTE: The credentials that display in this field are customized based on your rulebook activation and only include the following credential types: Vault, {PlatformName}, or any custom credential types that you have created. For more information about credentials, see link:{URLControllerUserGuide}/index#eda-set-up-credential[Setting up credentials for {EDAcontroller}] in the {TitleControllerUserGuide} guide.
+[NOTE]
+====
+The credentials that display in this field are customized based on your rulebook activation and only include the following credential types: Vault, {PlatformName}, or any custom credential types that you have created. For more information about credentials, see link:{URLControllerUserGuide}/index#eda-set-up-credential[Setting up credentials for {EDAcontroller}] in the {TitleControllerUserGuide} guide.
+====
 //[J. Self] Might need to update the link above for the updated Credentials section.
 * *Decision environment*: A decision environment is a container image to run Ansible rulebooks.
 +
-NOTE: In {EDAcontroller}, you cannot customize the pull policy of the decision environment.
+[NOTE]
+====
+In {EDAcontroller}, you cannot customize the pull policy of the decision environment.
 By default, it follows the behavior of the *always* policy.
 Every time an activation is started, the system tries to pull the most recent version of the image.
+====
 +
 * *Restart policy*: This is the policy that determines how an activation should restart after the container process running the source plugin ends. Select from the following options:
 ** *Always*: This restarts the rulebook activation immediately, regardless of whether it ends successfully or not, and occurs no more than 5 times.
