AAP-31661: Incorporated updates to AAP 2.5 release notes

--- a/downstream/titles/release-notes/topics/aap-25-fixed-issues.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-fixed-issues.adoc
@@ -29,7 +29,7 @@ This section provides information about fixed issues in {PlatformNameShort} 2.5.
 
 * The UI for creating and editing an organization now validates the *Max hosts* value. This value must be an integer and have a value between 0 and 214748364. (AAP-23270)
 
-* Installations that do not include the automation controller but have an external database will no longer install an unused internal Postgres server. (AAP-29798)
+* Installations that do not include the {ControllerName} but have an external database will no longer install an unused internal Postgres server. (AAP-29798)
 
 * Added default port values for all `pg_port` variables in the installer. (AAP-18484)
 
@@ -39,7 +39,7 @@ This section provides information about fixed issues in {PlatformNameShort} 2.5.
 
 * Fixed Postgres sslmode for verify-full that affected external Postgres and Postgres signed for 127.0.0.1 for internally managed Postgres. (AAP-7107)
 
-* Fixed support for automation hub content signing. (AAP-9739)
+* Fixed support for {HubName} content signing. (AAP-9739)
 
 * Fixed conditional code statements to align with changes from ansible-core issue #82295. (AAP-19053)
 
