--- a/downstream/titles/release-notes/topics/docs-25.adoc
+++ b/downstream/titles/release-notes/topics/docs-25.adoc
@@ -6,12 +6,14 @@
 {PlatformName} 2.5 documentation includes significant feature updates as well as documentation enhancements and offers an improved user experience. 
 
 The following are documentation enhancements in {PlatformNameShort} 2.5:
-* The “Setting up an automation controller token” chapter that previously existed has been deprecated and replaced with the current content in this section. As the Event-Driven Ansible controller is now integrated with centralized authentication and the Platform UI, this method simplifies the authentication process required for rulebook activations moving forward. 
+
+* The “Setting up an {ControllerName} token” chapter that previously existed has been deprecated and replaced with the current content in this section. As the {EDAcontroller} is now integrated with centralized authentication and the Platform UI, this method simplifies the authentication process required for rulebook activations moving forward. 
 
 * Documentation changes for 2.5 reflect terminology and product changes. Additionally, we have consolidated content into fewer documents. 
-
++
 The following table summarizes title changes for the 2.5 release.
-
++
+// Per call with Lynne Maynard on Mon. 23 Sept., the ask is to hold off on adding hyperlinks to the individual doc guides for 30 Sept. release as there have been many updates in the guide names and we don't want broken links issues. This is to be reconsidered in the next update, ie, update 1. Therefore, I have used "title attributes" and not "link attributes" for the guides. 
 [cols="2,2"]
 |===
 | Version 2.4 document title | Version 2.5 document title
@@ -20,46 +22,46 @@ The following table summarizes title changes for the 2.5 release.
 |Release notes
 
 |NA
-|New: Tested deployment models
+|New: {TitleAnalytics}
 
 |{PlatformName} planning guide
-|Planning your installation
+|{TitlePlanningGuide}
 
 |Containerized {PlatformNameShort} installation guide (Technology Preview release) 
-|Containerized installation (First Generally Available release)
+|{TitleContainerizedInstall} (First Generally Available release)
 
 |Deploying the {PlatformNameShort} operator on {OCPShort}
-|Installing on {OCPShort}
+|{TitleOperatorInstallation}
 
-|
-* Getting started with automation controller
-* Getting started with automation hub
-* Getting started with Event-Driven Ansible
-|New: Getting started with {PlatformNameShort}
+a|
+* Getting started with {ControllerName}
+* Getting started with {HubName}
+* Getting started with {EDAName}
+|New: {TitleGettingStarted}
 
 |Installing and configuring central authentication for the {PlatformNameShort}
-|Access management and authentication
+|{TitleCentralAuth}
 
 |Getting started with Ansible playbooks
 |Getting started with Ansible playbooks
 
 |{PlatformNameShort} operations guide
-|Operating {PlatformNameShort}
+|{TitleAAPOperationsGuide} 
 
 |{PlatformNameShort} automation mesh for {OperatorBase} 
-|Automation mesh for managed cloud or operator environments
+|{TitleOperatorMesh}
 
 |{PlatformNameShort} automation mesh for {VMBase} 
-|Automation mesh for VM environments
+|{TitleAutomationMesh}
 
 |Performance considerations for {OperatorBase} 
-|Performance considerations for operator environments
+|{TitleOCPPerformanceGuide}
 
 |{PlatformNameShort} operator backup and recovery guide
-|Backup and recovery for operator environments
+|{TitleOperatorBackup}
 
 |Troubleshooting {PlatformNameShort}
-|Troubleshooting {PlatformNameShort}
+|{TitleTroubleshootingAAP}
 
 |{PlatformNameShort} hardening guide
 |Not available for 2.5 release; to be published at a later date
@@ -71,7 +73,7 @@ The following table summarizes title changes for the 2.5 release.
 |{ControllerAG}
 
 |{ControllerName} API overview
-|Automation execution API overview
+|{TitleControllerAPIOverview}
 
 |{ControllerName} API reference
 |Automation execution API reference
@@ -80,40 +82,40 @@ The following table summarizes title changes for the 2.5 release.
 |Automation execution CLI reference
 
 |{EDAName} user guide
-|Using automation decisions
+|{TitleEDAUserGuide}
 
 |Managing content in {HubName}
 |
 - Managing automation content
 
-- Automation content API reference (give URL)
+- Automation content API reference
 
 |Ansible security automation guide
 |Ansible security automation guide
 
-|
-- Using the automation calculator
+a|
+* Using the automation calculator
 
-- Viewing reports about your Ansible automation environment
+* Viewing reports about your Ansible automation environment
 
-- Evaluating your automation controller job runs using the job explorer
+* Evaluating your automation controller job runs using the job explorer
 
-- Planning your automation jobs using the automation savings planner
-|Using automation analytics
+* Planning your automation jobs using the automation savings planner
+|{TitleAnalytics}
 
 |{PlatformNameShort} creator guide
-|Developing automation content
+|{TitleDevelopAutomationContent}
 
 |Automation content navigator creator guide
-|Using content navigator
+|{TitleNavigatorGuide}
 
 |Creating and consuming execution environments
-|Creating and using execution environments
+|{TitleBuilder}
 
-|Installing Ansible plug-ins for Red Hat Developer Hub
-|Installing Ansible plug-ins for Red Hat Developer Hub
+|Installing {AAPRHDH}
+|{TitlePluginRHDHInstall}
 
-|Using Ansible plug-ins for Red Hat Developer Hub
-|Using Ansible plug-ins for Red Hat Developer Hub
+|Using {AAPRHDH}
+|{TitlePluginRHDHUsing}
 
 |===
