--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -1,6 +1,8 @@
 // Templates for release notes are contained in the ..downstream/snippets folder.
 // For each release, make a copy of assembly-rn-template.adoc, rename and save as instructed in the template and add an include statement to this file.
-//If there are any technology previews, add the <.
+//If there are any technology previews, add the <tech-preview.adoc> file.
+// Asynchronous release notes - commented out until 2.5 has asynchronous release note updates
+// include::async/async-updates.adoc[leveloffset=+1]
 
 include::attributes/attributes.adoc[]
 
@@ -24,6 +26,3 @@ include::topics/aap-25-known-issues.adoc[leveloffset=+1]
 include::topics/aap-25-fixed-issues.adoc[leveloffset=+1]
 
 include::topics/docs-25.adoc[leveloffset+1]
-
-// Asynchronous release notes - commented out until 2.5 has asynchronous release note updates
-// include::async/async-updates.adoc[leveloffset=+1]
