--- a/downstream/titles/release-notes/topics/aap-25-deprecated-features.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-deprecated-features.adoc
@@ -5,16 +5,19 @@ include::../snippets/deprecated-features.adoc[]
 
 The following table provides information about features that were deprecated in {PlatformNameShort} 2.5:
 
-[%autowidth]
+[cols="30%,70%"]
 |===
 | Component | Feature
 
-|{ControllerNameStart}, {HubName}, and {EDAcontroller}
-|Tokens for the automation controller and the automation hub are deprecated. If you want to generate tokens, use the platform gateway to create them. 
+|{ControllerNameStart}, +
+{HubName}, and +
+{EDAcontroller}
+|Tokens for the {ControllerName} and the {HubName} are deprecated. If you want to generate tokens, use the platform gateway to create them. 
 
 The platform gateway is the service that handles authentication and authorization for the {PlatformNameShort}. It provides a single entry into the {PlatformNameShort} and serves the platform user interface, so you can authenticate and access all of the {PlatformNameShort} services from a single location.
 
-|{ControllerNameStart}, {HubName}
+|{ControllerNameStart} and +
+{HubName}
 |All non-local authentications into the {ControllerName} and {HubName} are deprecated. Use the platform gateway to configure external authentications, such as SAML, LDAP, and RADIUS.
 
 |Ansible-core
@@ -30,7 +33,7 @@ The platform gateway is the service that handles authentication and authorizatio
 |The *STRING_CONVERSION_ACTION* configuration option is deprecated as it is no longer used in the ansible-core code base.
 
 |Ansible-core
-|The `smart` option for setting a connection plug-in is being removed as its main purpose of choosing between SSH and Paramiko protocols is now irrelevant. Select an explicit connection plug-in instead. 
+|The *smart* option for setting a connection plug-in is being removed as its main purpose of choosing between SSH and Paramiko protocols is now irrelevant. Select an explicit connection plug-in instead. 
 
 |Ansible-core
 |The undocumented `vaultid` parameter in the `vault` and `unvault` filters is deprecated and will be removed in ansible-core version 2.20. Use `vault_id` instead. 
@@ -42,14 +45,14 @@ The platform gateway is the service that handles authentication and authorizatio
 |The `required` parameter in the API *ansible.module_utils.common.process.get_bin_path* is deprecated.
 
 |Ansible-core
-|`module_utils` - importing the following convenience helpers from `ansible.module_utils.basic` has been deprecated: +
+|`module_utils` - Importing the following convenience helpers from `ansible.module_utils.basic` has been deprecated: +
 `get_exception`, `literal_eval`, `_literal_eval`, `datetime`, `signal`, `types`, `chain`, `repeat`, `PY2`, `PY3`, `b`, `binary_type`, `integer_types`, `iteritems`, `string_types`, `test_type`, `map`, and `shlex_quote`. +
 Import the helpers from the source definition.
 
 |Ansible-core
 |`ansible-doc` - Role `entrypoint` attributes are deprecated and eventually will no longer be shown in `ansible-doc` from ansible-core.
 
-|Execution environment
+|{ExecEnvNameStartSing}
 |Execution environment-29 will be deprecated in the next major release after {PlatformNameShort} 2.5.
 
 |Installer
@@ -62,7 +65,7 @@ Import the helpers from the source definition.
 
 API endpoints that will be removed in a future release either because their functionality is being removed or superseded with other capabilities. For example, with the platform moving to a centralized authentication system in the platform gateway, the existing authorization APIs in the {ControllerName} and {HubName} are being deprecated for future releases as all authentication operations should occur in the platform gateway.
 
-[%autowidth]
+[cols="25%,25%,50%"]
 |===
 | Component | Endpoint | Capability
 
