--- a/downstream/titles/release-notes/topics/aap-25-known-issues.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-known-issues.adoc
@@ -5,14 +5,21 @@ This section provides information about known issues in {PlatformNameShort} 2.5.
 
 == {PlatformNameShort}
 
-* Added the `podman_containers_conf_logs_max_size` variable for containers.conf to control the max log size for Podman installations. The default value is 10 MiB. (AAP-12295)
+* Added the `podman_containers_conf_logs_max_size` variable for *containers.conf* to control the max log size for Podman installations. The default value is 10 MiB. (AAP-12295)
+
+* Setting the `pg_host=` value without any other context no longer results in an empty HOST section of the *settings.py* in the {ControllerName}. As a workaround, delete the `pg_host=` value or set it to `pg_host=''`. (AAP-31915) 
+
 
 == {EDAName}
 
 * mTLS event stream creation should be disallowed on all installation methods by default. It is currently disallowed on {OCPShort} installation, but not disallowed in the containerized installations or on RPM installations. (AAP-31337)
 
-== {EDAName}
+* If a primary Redis node enters a `failed` state and a new primary node is promoted, {EDAName} workers and scheduler are unable to reconnect to the cluster. This causes activations to fail until the containers or pods are recycled. (AAP-30722) 
+For more information, see the KCS article link:https://access.redhat.com/articles/7088545[Redis failover causes {EDAName} activation failures].
+
+
+== {AAPRHDH}
 
 * Python VS Code extension v2024.14.1 does not work in OpenShift Dev Spaces version 1.9.3, prohibiting the Ansible VS Code extension from loading. As a workaround, downgrade the Python VS Code extension version to 2024.12.3.
 
-* The Ansible Content Creator *Get Started* page links do not work in OpenShift Dev Spaces version 1.9.3. As a workaround, use the Ansible VS Code Command Palette for the Ansible Content Creator features.
+* The Ansible Content Creator *Get Started* page links do not work in OpenShift Dev Spaces version 1.9.3. As a workaround, use the link:https://code.visualstudio.com/docs/getstarted/userinterface#:~:text=VS%20Code%20is%20equally%20accessible,for%20the%20most%20common%20operations.[Ansible VS Code Command Palette] to access the features.
