--- a/downstream/titles/release-notes/topics/aap-25-removed-features.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-removed-features.adoc
@@ -5,15 +5,15 @@ Removed features are those that were deprecated in earlier releases. They are no
 
 The following table provides information about features that are removed in {PlatformNameShort} 2.5:
 
-[%autowidth]
+[cols="20%,80%"]
 |===
 | Component | Feature
 
 |{ControllerNameStart}
-|Proxy support for the automation controller has been removed. Load balancers must now point to the platform gateway instead of the controller. 
+|Proxy support for the {ControllerName} has been removed. Load balancers must now point to the platform gateway instead of the controller. 
 
 |ansible-lint
-|Support for old Ansible include tasks syntax is removed in version 2.16 and moved to include_tasks or imprt_tasks. Update content to use the currently-supported Ansible syntax, like link:https://docs.ansible.com/ansible/latest/collections/ansible/builtin/include_tasks_module.html[include_tasks] or link:https://docs.ansible.com/ansible/latest/collections/ansible/builtin/import_tasks_module.html#ansible-collections-ansible-builtin-import-tasks-module[import_tasks]. 
+|Support for old Ansible `include` tasks syntax is removed in version 2.16 and moved to `include_tasks` or `import_tasks`. Update content to use the currently-supported Ansible syntax, like link:https://docs.ansible.com/ansible/latest/collections/ansible/builtin/include_tasks_module.html[include_tasks] or link:https://docs.ansible.com/ansible/latest/collections/ansible/builtin/import_tasks_module.html#ansible-collections-ansible-builtin-import-tasks-module[import_tasks]. 
 
 |{EDAcontroller}
 |Tokens for the {EDAcontroller} are deprecated. Their configuration has been removed from rulebook activations, and they have been replaced with the {PlatformNameShort} credential type.
@@ -22,13 +22,13 @@ The following table provides information about features that are removed in {Pla
 |Support for Windows Server versions 2012 and 2012 R2 is removed, as Microsoft's supported end-of-life date is 10 October 2023. These versions of Windows Server are not tested in the {PlatformNameShort} 2.5 release. Red Hat does not guarantee that these features will continue to work as expected in this and future releases. 
 
 |Ansible-core
-|In the Action plugin with ActionBase class, the deprecated `_remote_checksum` method is now removed. Use `_execute_remote_stat` instead. 
+|In the Action plugin with an *ActionBase* class, the deprecated `_remote_checksum` method is now removed. Use `_execute_remote_stat` instead. 
 
 |Ansible-core
 |The deprecated *FileLock* class is now removed. Add your own implementation or rely on third-party support.
 
 |Ansible-core
-|Python 3.9 is now removed as a supported version of the automation controller. Use Python 3.10 or later. 
+|Python 3.9 is now removed as a supported version of the {ControllerName}. Use Python 3.10 or later. 
 
 |Ansible-core
 |The `include` module that was deprecated in ansible-core 2.12 is now removed. Use `include_tasks` or `import_tasks` instead.
