--- a/downstream/titles/release-notes/topics/aap-25.adoc
+++ b/downstream/titles/release-notes/topics/aap-25.adoc
@@ -7,7 +7,7 @@
 == Installation changes
 Starting with {PlatformNameShort} 2.5, three different on-premise deployment models are fully tested. In addition to the existing RPM-based installer and operator, support for the containerized installer is being added. 
 
-As the platform moves toward a container-first model, the RPM-based installer will be removed in a future release, and a deprecation warning is being issued with the release of AAP 2.5. While the RPM installer will still be supported for {PlatformNameShort} 2.5 until it is removed, the investment will focus on the containerized install for RHEL deployments and the operator install for OpenShift deployments. Upgrades from 2.4 containerized {PlatformNameShort} Technology Preview to 2.5 containerized {PlatformNameShort} are unsupported at this time. 
+As the platform moves toward a container-first model, the RPM-based installer will be removed in a future release, and a deprecation warning is being issued with the release of {PlatformNameShort} 2.5. While the RPM installer will still be supported for {PlatformNameShort} 2.5 until it is removed, the investment will focus on the {ContainerBase} for RHEL deployments and the {OperatorBase} for OpenShift deployments. Upgrades from 2.4 containerized {PlatformNameShort} Technology Preview to 2.5 containerized {PlatformNameShort} are unsupported at this time. 
 
 == Deployment topologies
 Red Hat tests {PlatformNameShort} 2.5 with a defined set of topologies to provide you with opinionated deployment options. While it is possible to install the {PlatformNameShort} on different infrastructure topologies and with different environment configurations, Red Hat guarantees support for the topologies outlined in the following table. 
@@ -16,87 +16,116 @@ At the time of the {PlatformNameShort} 2.5 GA release, a limited set of topologi
 
 The following table shows the tested topologies for {PlatformNameShort} 2.5:
 
-[cols="a,a,a,a"]
+[cols="10%,20%,40%,30%"]
 |===
 | Mode | Infrastructure | Description | Tested topologies
 
-|RPM | Virtual Machines/Bare Metal | The RPM installer deploys the {PlatformNameShort} on {RHEL} using RPMs to install the platform on host machines. Customers manage the product and infrastructure lifecycle. | 
+|RPM | Virtual Machines/Bare Metal | The RPM installer deploys the {PlatformNameShort} on {RHEL} using RPMs to install the platform on host machines. Customers manage the product and infrastructure lifecycle.
+a| 
 * RPM enterprise topology
 * RPM mixed enterprise topology
 
-|Containers | Virtual Machines/Bare Metal | The containerized installer deploys the {PlatformNameShort} on {RHEL} by using Podman that runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.| 
+|Containers | Virtual Machines/Bare Metal | The containerized installer deploys the {PlatformNameShort} on {RHEL} by using Podman that runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.
+a| 
 * Container enterprise topology
 * Container growth topology
 
-|Operator | Red Hat OpenShift | The operator uses Red Hat OpenShift operators to deploy the {PlatformNameShort} within Red Hat OpenShift. Customers manage the product and infrastructure lifecycle.| 
+|Operator | Red Hat OpenShift | The operator uses Red Hat OpenShift operators to deploy the {PlatformNameShort} within Red Hat OpenShift. Customers manage the product and infrastructure lifecycle.
+a| 
 * Operator enterprise topology
 * Operator growth topology
 
 |===
 
-For more information, see the topology documentation (give URL). 
+For more information, see {LinkTopologies}. 
 
 == Unified UI
 In versions before 2.5, the {PlatformNameShort} was split into three primary services: {ControllerName}, {HubName}, and {EDAcontroller}. Each service included standalone user interfaces, separate deployment configurations, and separate authentication schemas.
 
-In {PlatformNameShort} 2.5, the platform gateway is provided as a service that handles authentication and authorization for the Ansible Automation Platform. With the platform gateway, all services that make up the {PlatformNameShort} are consolidated into a single unified UI. The unified UI provides a single entry into the {PlatformNameShort} and serves the platform user interface to authenticate and access all of the {PlatformNameShort} services from a single location.
+In {PlatformNameShort} 2.5, the platform gateway is provided as a service that handles authentication and authorization for the {PlatformNameShort}. With the platform gateway, all services that make up the {PlatformNameShort} are consolidated into a single unified UI. The unified UI provides a single entry into the {PlatformNameShort} and serves the platform user interface to authenticate and access all of the {PlatformNameShort} services from a single location.
 
 === Terminology changes
 
 The Unified UI highlights the functional benefits provided by each underlying service. New UI terminology aligns to earlier names as follows:
 
-* Automation execution provides functionality from the {ControllerName} service
-* Automation decisions provides functionality from the {EDAName} service
-* Automation content provides functionality from the {HubName} service
+* *Automation execution* provides functionality from the *{ControllerName}* service
+* *Automation decisions* provides functionality from the *{EDAName}* service
+* *Automation content* provides functionality from the *{HubName}* service
 
 == {EDAName} functionality (Automation decisions)
 With {PlatformNameShort} 2.5, {EDAName} functionality has been enhanced with the following features:
 
-* Enterprise single-sign on and role-based access control are available through a new {PlatformNameShort} UI, which enables a single point of authentication and access to all functional components: Automation Execution ({ControllerName}), Automation Decision ({EDAcontroller}), and Automation Content ({HubName}), Automation Analytics, Access Management, and Ansible Lightspeed.
+* Enterprise single-sign on and role-based access control are available through a new {PlatformNameShort} UI, which enables a single point of authentication and access to all functional components as follows: 
+** Automation Execution ({ControllerName})
+** Automation Decision ({EDAName})
+** Automation Content ({HubName})
+** Automation Analytics
+** Access Management
+** {LightspeedShortName}
 
-* Simplified event routing capabilities introduce event streams, which eliminates the need for complicated network configuration and routes events through the Postgres Notify/Listen feature to attach to different rulebook activations. 
+* Simplified event routing capabilities introduce event streams. Event streams are an easy way to connect your sources to your rulebooks. This new capability lets you create a single endpoint to receive alerts from an event source and then use the events in multiple rulebooks. This simplifies rulebook activation setup, reduces maintenance demands, and helps lower risk by eliminating the need for additional ports to be open to external traffic. 
 
-* Horizontal scalability enables flexible scaling of events automation based on an organization's needs. This allows multi-node deployments that can be increased or decreased at any time.
+* {EDAName} in the {PlatformNameShort} 2.5 now supports horizontal scalability and enables high-availability deployments of the {EDAController}. These capabilities allow for the installation of multiple {EDAName} nodes and thus enable you to create highly available deployments. 
 
-* High availability (HA) deployment is available due to centralized HA Redis shared between the {EDAcontroller} and the {PlatformNameShort} UI.
+* Migration to the new platform-wide {PlatformName} credential type replaces the legacy controller token for enabling rulebook activations to call jobs in the {ControllerName}.
 
-* Migration to the new platform-wide {PlatformName} credentials replaces the controller token for enabling rulebook activations to call jobs in the {ControllerName}.
-
-* Credential management provides the ability to create encrypted credentials and variables for your rulebook activations.
+* {EDAName} now has the ability to manage credentials that can be added to rulebook activations. These credentials can be used in rulebooks to authenticate to event sources. In addition, you can now attach vault credentials to rulebook activations so that you can use vaulted variables in rulebooks. Encrypted credentials and vaulted variables enable enterprises to secure the use of {EDAName} within their environment.
 
 * New modules are added to the *ansible.eda* collection to enable users to automate the configuration of the {EDAcontroller} using Ansible playbooks.
 
-== {EDAName} 2.5 with automation controller 2.4
-You can use a newly installed version of {EDAName} from {PlatformNameShort} 2.5 with some existing versions of the automation controller. A hybrid configuration is supported with the following versions:
+[id="eda-2.5-with-automation-controller-2.4"]
+== {EDAName} 2.5 with {ControllerName} 2.4
+You can use a newly installed version of {EDAName} from {PlatformNameShort} 2.5 with some existing versions of the {ControllerName}. A hybrid configuration is supported with the following versions:
 
-* 2.4 {PlatformNameShort} version of automation controller (4.4 or 4.5)
+* 2.4 {PlatformNameShort} version of {ControllerName} (4.4 or 4.5)
 * 2.5 {PlatformNameShort} version of {EDAName} (1.1)
 
-You can only use new installations of {EDAName} in this configuration. This hybrid configuration is fully supported by Red Hat. See *Install and configure EDA 1.1 with controller 4.4 or 4.5* (give URL) for details on setting up this configuration.
+You can only use new installations of {EDAName} in this configuration. RPM-based hybrid deployments are fully supported by Red Hat. See *Install and configure {EDAName} 1.1 with {ControllerName} 4.4 or 4.5* in link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[{EDAName} 2.5 with {ControllerName} 2.4] for details on setting up this configuration.
 
-A hybrid configuration means you can install a new Event-Driven Ansible service and configure rulebook activations to execute job templates on a 2.4 version of the automation controller.
+A hybrid configuration means you can install a new {EDAName} service and configure rulebook activations to execute job templates on a 2.4 version of the {ControllerName}.
 
-== Red Hat Ansible Lightspeed on-premise deployment 
-{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. {LightspeedShortName} can be used both as a cloud service or as an on-premise deployment.
+== {LightspeedShortName} on-premise deployment 
+{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently; it is now available as an on-premise deployment on the {PlatformNameShort} 2.5. 
 
-The on-premise deployment provides the {PlatformNameShort} customers more control over their data and supports compliance with enterprise security policies. For example, organizations in sensitive industries with data privacy or air-gapped requirements can use on-premise deployments of both {LightspeedShortName} and {ibmwatsonxcodeassistant} for {LightspeedShortName} on Cloud Pak for Data. {LightspeedShortName} on-premise deployments are supported on {PlatformNameShort} 2.5. For more information, see *Setting up {LightspeedShortName} on-premise deployment* (give URL).
+The on-premise deployment provides the {PlatformNameShort} customers more control over their data and supports compliance with enterprise security policies. For example, organizations in sensitive industries with data privacy or air-gapped requirements can use on-premise deployments of both {LightspeedShortName} and {ibmwatsonxcodeassistant} for {LightspeedShortName} on Cloud Pak for Data. {LightspeedShortName} on-premise deployments are supported on {PlatformNameShort} 2.5. For more information, see the chapter link:https://docs.redhat.com/en/documentation/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index#configuring-lightspeed-onpremise_set-up-lightspeed[Setting up {LightspeedShortName} on-premise deployment] in the _{LightspeedFullName} User Guide_.
 
 == {AAPRHDH}
 The {AAPRHDH} deliver an Ansible-first {RHDH} user experience that simplifies creating Ansible content, such as playbooks and collections, for Ansible users of all skill levels. The Ansible plug-ins provide curated content and features to accelerate Ansible learner onboarding and streamline Ansible use case adoption across your organization. 
 
-The Ansible plug-ins provide:
-* A customized home page and navigation tailored to Ansible users.
-* Curated Ansible learning paths to help users new to Ansible.
-* Software templates for creating Ansible playbooks and collection projects that follow best practices.
-* Links to supported development environments and tools with opinionated configurations.
+The Ansible plug-ins provide the following capabilities:
 
-For more information, see the *{AAPRHDH} documentation* (give URL). 
+* A customized home page and navigation tailored to Ansible users
+* Curated Ansible learning paths to help users new to Ansible
+* Software templates for creating Ansible playbooks and collection projects that follow best practices
+* Links to supported development environments and tools with opinionated configurations
+
+For more information, see the link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/installing_ansible_plug-ins_for_red_hat_developer_hub/rhdh-intro_aap-plugin-rhdh-installing#rhdh-about-plugins_rhdh-intro[{AAPRHDH}] documentation. 
+
+== {ToolsName}
+{ToolsName} is a suite of tools provided with the {PlatformNameShort} to help automation creators create, test, and deploy playbook projects, execution environments, and collections on Linux, MacOS, and Windows platforms. Consolidating core Ansible tools into a single package simplifies tool management and promotes recommended practices in the automation content creation experience.
+
+{ToolsName} are distributed in an RPM package for RHEL systems, and in a supported container distribution that can be used on Linux, Mac, and Windows OS.
+
+{ToolsName} comprise the following tools:
+
+* ansible-builder
+* ansible-core
+* ansible-lint
+* ansible-navigator
+* ansible-sign
+* Molecule
+* ansible-creator
+* ansible-dev-environment
+* pytest-ansible
+* tox-ansible
+
+For more information, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/developing_ansible_automation_content/index[Developing Ansible automation content]. 
 
 == Enhancements
 
 * Added the ability to provide `mounts.conf` or copy from a local or remote source when installing Podman. (AAP-16214)
 
-* Updated the inventory file to include SSL key and cert parameters for provided SSL web certificates. (AAP-13728)
+* Updated the inventory file to include the SSL key and certificate parameters for provided SSL web certificates. (AAP-13728)
 
 * Added an {PlatformNameShort} operator-version label on k8s resources created by the operator. (AAP-31058)
 
@@ -106,19 +135,19 @@ For more information, see the *{AAPRHDH} documentation* (give URL).
 
 * Added a new configuration endpoint for the REST API. (AAP-13639)
 
+* Allowed adjustment of *RuntimeDirectorySize* for Podman environments at the time of installation. (AAP-11597)
+
+* Added support for the *SAFE_PLUGINS_FOR_PORT_FORWARD* setting for *eda-server* to the installation program. (AAP-21503)
+
+* Aligned inventory content to tested topologies and added comments for easier access to groups and variables when custom configurations are required. (AAP-30242)
+
 * The variable *`automationedacontroller_allowed_hostnames`* is no longer needed and is no longer supported for {EDAName} installations. (AAP-24421)
 
 * The *eda-server* now opens the ports for a rulebook with a source plugin that requires inbound connections only if that plugin is allowed in the settings. (AAP-17416)
 
 * The {EDAName} settings are now moved to a dedicated YAML file. (AAP-13276)
 
-* Allowed adjustment of *RuntimeDirectorySize* for Podman environments at the time of installation. (AAP-11597)
-
-* Starting with {PlatformNameShort} 2.5, customers using the controller collection (ansible.controller) have the platform collection (ansible.platform) as a single point of entry, and must use the platform collection to seed organizations, users, and teams. (AAP-31517)
-
-* Added support for the *SAFE_PLUGINS_FOR_PORT_FORWARD* setting for *eda-server* to the installation program. (AAP-21503)
-
-* Aligned inventory content to tested topologies and added comments for easier access to groups and variables when custom configurations are required. (AAP-30242)
+* Starting with {PlatformNameShort} 2.5, customers using the controller collection (`ansible.controller`) have the platform collection (`ansible.platform`) as a single point of entry, and must use the platform collection to seed organizations, users, and teams. (AAP-31517)
 
 ////
 THE FOLLOWING IS THE SNIPPET FOR TECH. PREVIEW. ADD THIS SNIPPET IF THERE ARE ANY TECH. PREVIEW FEATURES FOR THE RELEASE. AAP 2.5 HAD NO TECH. PREVIEW FEATURES.
