Update inventory file appendix
- Add appendix to Containerized installation doc
- Correct typos, use of attributes
- Update intro description to Inventory file variables section
- Update ordering if inventory file varaible sections

Update product docs installer var appendix with 2.5 variables

https://issues.redhat.com/browse/AAP-30775

--- a/downstream/modules/platform/ref-controller-variables.adoc
+++ b/downstream/modules/platform/ref-controller-variables.adoc
@@ -7,7 +7,7 @@
 | *RPM variable name* | *Container variable name* | *Description*
 | *`admin_email`* | | The email address used for the admin user for {ControllerName}.
 
-| *`admin_password`* | `controller_admin_password`| The password for an administration user to access the UI when the installation is complete.
+| *`admin_password`* | `controller_admin_password`| {ControllerNameStart} admin password.
 
 Passwords must be enclosed in quotes when they are provided in plain text in the inventory file.
 
@@ -68,7 +68,7 @@ A `node_type=control` means that the node only runs project and inventory update
 
 A `node_type=hybrid` can run everything.
 
-Default for this group = `hybrid`
+Default for this group = `hybrid`.
 
 For `[execution_nodes]` group:
 
