--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -67,7 +67,7 @@ Default = `false`
 
 Default = `false`
 
-| `automationhub_disable_hsts` | `hub_nginx_disable_hsts` | The default installation deploys a TLS enabled {HubNameMain}.
+| `automationhub_disable_hsts` | `hub_nginx_disable_hsts` | The default installation deploys a TLS enabled {HubName}.
 Use this variable if you deploy {HubName} with _HTTP Strict Transport Security_ (HSTS) web-security policy enabled.
 This variable disables the HSTS web-security policy mechanism.
 
@@ -75,7 +75,7 @@ Default = `false`
 
 | `automationhub_disable_https` | `hub_nginx_disable_https` | _Optional_
 
-If {HubNameMain} is deployed with HTTPS enabled.
+If {HubName} is deployed with HTTPS enabled.
 
 Default = `false`
 
