--- a/downstream/titles/aap-containerized-install/master.adoc
+++ b/downstream/titles/aap-containerized-install/master.adoc
@@ -15,3 +15,6 @@ include::platform/assembly-horizontal-scaling.adoc[leveloffset=+1]
 
 [appendix]
 include::platform/assembly-appendix-troubleshoot-containerized-aap.adoc[leveloffset=1]
+
+[appendix]
+include::platform/assembly-appendix-inventory-file-vars.adoc[leveloffset=1]
