--- a/downstream/assemblies/platform/assembly-appendix-inventory-file-vars.adoc
+++ b/downstream/assemblies/platform/assembly-appendix-inventory-file-vars.adoc
@@ -1,8 +1,7 @@
 [id="appendix-inventory-files-vars"]
 = Inventory file variables
 
-The following tables contain information about the pre-defined variables used in Ansible installation inventory files.
-Not all of these variables are required.
+The following tables contain information about the variables used in {PlatformNameShort}'s installation `inventory` files. The tables include the variables that you can use for RPM-based installation and {ContainerBase}.
 
 include::platform/ref-general-inventory-variables.adoc[leveloffset=+1]
 include::platform/ref-hub-variables.adoc[leveloffset=+1]
@@ -13,7 +12,7 @@ include::platform/ref-hub-variables.adoc[leveloffset=+1]
 include::platform/ref-controller-variables.adoc[leveloffset=+1]
 include::platform/ref-eda-controller-variables.adoc[leveloffset=+1]
 include::platform/ref-gateway-variables.adoc[leveloffset=+1]
-include::platform/ref-ansible-inventory-variables.adoc[leveloffset=+1]
 include::platform/ref-database-inventory-variables.adoc[leveloffset=+1]
 include::platform/ref-images-inventory-variables.adoc[leveloffset=+1]
 include::platform/ref-receptor-inventory-variables.adoc[leveloffset=+1]
+include::platform/ref-ansible-inventory-variables.adoc[leveloffset=+1]
