Update inventory file appendix (#2099)
- Add appendix to Containerized installation doc
- Correct typos, use of attributes
- Update intro description to Inventory file variables section
- Update ordering if inventory file varaible sections

Update product docs installer var appendix with 2.5 variables

https://issues.redhat.com/browse/AAP-30775

--- a/downstream/titles/aap-containerized-install/master.adoc
+++ b/downstream/titles/aap-containerized-install/master.adoc
@@ -14,3 +14,6 @@ include::platform/assembly-aap-containerized-installation.adoc[leveloffset=+1]
 
 [appendix]
 include::platform/assembly-appendix-troubleshoot-containerized-aap.adoc[leveloffset=1]
+
+[appendix]
+include::platform/assembly-appendix-inventory-file-vars.adoc[leveloffset=1]
