--- a/downstream/titles/topologies/master.adoc
+++ b/downstream/titles/topologies/master.adoc
@@ -22,3 +22,8 @@ include::topologies/assembly-ocp-topologies.adoc[leveloffset=+1]
 
 //Automation mesh nodes 
 include::topologies/topologies/ref-mesh-nodes.adoc[leveloffset=+1]
+
+[NOTE]
+====
+For additional information about each of the tested topologies described in this document, see the link:https://github.com/ansible/test-topologies/[test-topologies GitHub repo].
+====
