Update tested OS architecture for relevant topologies
Update OS to include AArch64 support in addition to x86_64.

Create a document for supported topologies

https://issues.redhat.com/browse/AAP-28228

--- a/downstream/modules/topologies/ref-cont-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-a-env-a.adoc
@@ -36,7 +36,7 @@ Red Hat has tested the following configurations to install and run {PlatformName
 a| 
 * Valid {PlatformName} subscription
 * Valid {RHEL} subscription (to consume the BaseOS and AppStream repositories)
-| Operating system | {RHEL} 9.2 or later 64-bit (x86_64)
+| Operating system | {RHEL} 9.2 or later x86_64
 | Ansible-core | Ansible-core version 2.15 or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome
 | Database | PostgreSQL version 15
