--- a/downstream/modules/topologies/ref-rpm-b-env-b.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-b.adoc
@@ -35,7 +35,7 @@ Red Hat has tested the following configurations to install and run {PlatformName
 |====
 | Type | Description 
 | Subscription | Valid {PlatformName} subscription
-| Operating system | {RHEL} 9.2 or later 64-bit (x86_64)
+| Operating system | {RHEL} 9.2 or later x86_64 and AArch64
 | Ansible-core | Ansible-core version 2.15 or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome
 | Database | PostgreSQL version 15
