--- a/downstream/modules/topologies/ref-ocp-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-a-env-a.adoc
@@ -40,7 +40,7 @@ Red Hat has tested the following configurations to install and run {PlatformName
 |====
 | Type | Description 
 | Subscription | Valid {PlatformName} subscription
-| Operating system | {RHEL} 9.2 or later 64-bit (x86_64)
+| Operating system | {RHEL} 9.2 or later x86_64 and AArch64
 | Red Hat OpenShift  
 a| 
 * Version: 4.14
