AAP-29097 Created new SER chapter and added it to master.adoc

--- a/downstream/titles/eda/eda-user-guide/master.adoc
+++ b/downstream/titles/eda/eda-user-guide/master.adoc
@@ -18,6 +18,7 @@ include::eda/assembly-eda-credential-types.adoc[leveloffset=+1]
 
 include::eda/assembly-eda-projects.adoc[leveloffset=+1]
 include::eda/assembly-eda-decision-environments.adoc[leveloffset=+1]
+include::eda/assembly-simplified-event-routing.adoc[leveloffset=+1]
 include::eda/assembly-eda-set-up-rhaap-credential.adoc[leveloffset=+1]
 //include::eda/assembly-eda-set-up-token.adoc[leveloffset=+1]
 include::eda/assembly-eda-rulebook-activations.adoc[leveloffset=+1]
