AAP-29097 Created new SER chapter and added it to master.adoc

--- a/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
+++ b/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
@@ -1,17 +1,19 @@
 
-[id="ansible-rulebooks"]
+[id="simplified-event-routing"]
 
-= Ansible rulebooks
+= Simplfied event routing
 
-{EDAcontroller} provides the interface in which Event-Driven Ansible automation performs. Ansible rulebook provides the framework for Event-Driven Ansible automation. Ansible rulebook is essentially a collection of rulesets, which in turn, consists of one or more sources, rules, and conditions.
+Simplified event routing enables {EDAcontroller} to capture and analyze data from various remote systems using event streams. Event streams allow you to send events from a remote system like GitHub or GitLab into Event-Driven Ansible controller. You can attach 1 or more event streams to an activation by swapping out sources in a rulebook. 
 
-include::eda/con-decision-environments.adoc[leveloffset=+1]
-include::eda/con-rulebook-actions.adoc[leveloffset=+1]
+Event streams are an easy way to connect your sources to your rulebooks. This capability lets you create a single endpoint to receive alerts from an event source and then use the events in multiple rulebooks.
+
+include::eda/con-event-streams.adoc[leveloffset=+1]
+
 
 
 [role="_additional-resources"]
 .Additional resources
-* For more information on using rulebooks, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/event-driven_ansible_controller_user_guide/index[Event-Driven Ansible controller User's Guide].
+* 
 * For more detailed information on Ansible rulebooks, see the section on link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html[Rulebooks] in the link:https://ansible.readthedocs.io/projects/rulebook/en/latest/[Ansible Rulebook documentation]. 
 
 
