AAP-31661: Resolved a typo in master.adoc file

--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -25,4 +25,4 @@ include::topics/aap-25-known-issues.adoc[leveloffset=+1]
 
 include::topics/aap-25-fixed-issues.adoc[leveloffset=+1]
 
-include::topics/docs-25.adoc[leveloffset+1]
+include::topics/docs-25.adoc[leveloffset=+1]
