--- a/downstream/modules/platform/proc-gw-role-mapping.adoc
+++ b/downstream/modules/platform/proc-gw-role-mapping.adoc
@@ -18,14 +18,10 @@ Role mapping can be specified separately for each account authentication.
 . Select *Revoke* to remove the role for the user when none of the trigger conditions are matched. 
 . Select a *Role* to be applied or removed for matching users.
 . Click btn:[Next].
-+
-[NOTE]
-====
-The mapping precedence is determined by the order in which the mappings are listed. 
-====
-+
-. Click btn:[Next] to review and verify the mapping configurations.
-. Click btn:[Finish].
+
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-mapping-next-steps.adoc[]
 
 
 
