--- a/downstream/modules/platform/proc-gw-superuser-mapping.adoc
+++ b/downstream/modules/platform/proc-gw-superuser-mapping.adoc
@@ -17,14 +17,7 @@ Role mapping can be specified separately for each account authentication.
 . Select a *Trigger* from the list. See xref:gw-authenticator-map-triggers[Authenticator map triggers] for more information about map triggers.
 . Select *Revoke* to remove the superuser role from the user when none of the trigger conditions are matched. 
 . Click btn:[Next].
-+
-[NOTE]
-====
-The mapping precedence is determined by the order in which the mappings are listed. 
-====
-+
-. Click btn:[Next] to review and verify the mapping configurations.
-. Click btn:[Finish].
 
-
-
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-mapping-next-steps.adoc[]
