--- a/downstream/modules/platform/ref-controller-organization-mapping.adoc
+++ b/downstream/modules/platform/ref-controller-organization-mapping.adoc
@@ -17,14 +17,9 @@ When organization mapping is positively evaluated, a specified organization is c
 . Select the *Organization* to which matching users are added or blocked.
 . Select a *Role* to be applied or removed for matching users (for example, *Organization Admin* or *Organization Member*).
 . Click btn:[Next].
-+
-[NOTE]
-====
-The mapping precedence is determined by the order in which the mappings are listed. 
-====
-+
-. Click btn:[Next] to review and verify the mapping configurations.
-. Click btn:[Finish].
 
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-mapping-next-steps.adoc[]
 
 
