--- a/downstream/modules/platform/ref-controller-team-mapping.adoc
+++ b/downstream/modules/platform/ref-controller-team-mapping.adoc
@@ -22,14 +22,10 @@ When Team mapping is positively evaluated, a specified team and its organization
 . Select the *Team* and *Organization* to which matching users are added or blocked.
 . Select a *Role* to be applied or removed for matching users (for example, *Team Admin* or *Team Member*).
 . Click btn:[Next].
-+
-[NOTE]
-====
-The mapping precedence is determined by the order in which the mappings are listed. 
-====
-+
-. Click btn:[Next] to review and verify the mapping configurations.
-. Click btn:[Finish].
+
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-mapping-next-steps.adoc[]
 
 
 
