--- a/downstream/modules/platform/con-gw-authenticator-map-examples.adoc
+++ b/downstream/modules/platform/con-gw-authenticator-map-examples.adoc
@@ -4,11 +4,11 @@
 
 = Authenticator map examples
 
-* Make this user a superuser if they have an attribute called `aap_superuser` with a value of `True`.
+* Make this user a superuser if they have an attribute called `aap_superuser` with a value of _True_.
 * Add this user to a team if they have the group `cn=Administrators,ou=AAP,ou=example,o=com` or `cn=Operators,ou=AAP,ou=example,o=com`. 
-* Never allow access to the system if the user has an attribute called `disabled` with a value of `True`, `Yes` or `Until Further Notice`.
+* Never allow access to the system if the user has an attribute called `disabled` with a value of _True_, _Yes_ or _Until Further Notice_.
 
-Since maps are executed in order, it is possible to create exceptions. Expanding on the previous example for “Never allow access to the system if the user has an attribute called disabled with a value of `True`, `Yes` or `Until Further Notice`.
+Since maps are executed in order, it is possible to create exceptions. Expanding on the previous example for “Never allow access to the system if the user has an attribute called disabled with a value of _True_, _Yes_ or _Until Further Notice_.
 
 You can add another rule with a higher order, such as, “Allow access to the system for a `disabled` user if they are in the group `Emergency Contacts`.”
 
