--- a/downstream/modules/platform/con-gw-authenticator-map-types.adoc
+++ b/downstream/modules/platform/con-gw-authenticator-map-types.adoc
@@ -6,10 +6,10 @@
 
 {PlatformNameShort} supports the following rule types:
 
-Allow:: Determine if the user is allowed to log into the system
-Organization:: Determine if a user should be put into an organization
-Team:: Determine if the user should be a member of a team
-Role:: Determine if the user is a member of a role (for example System Auditor)
-Is Superuser:: Determine if the user is a superuser in the system 
+Allow:: Determine if the user is allowed to log into the system.
+Organization:: Determine if a user should be put into an organization.
+Team:: Determine if the user should be a member of a team.
+Role:: Determine if the user is a member of a role (for example, _System Auditor_).
+Is Superuser:: Determine if the user is a superuser in the system. 
 
 These authentication map types can be used with any type of authenticator. 
