--- a/downstream/modules/platform/proc-gw-allow-mapping.adoc
+++ b/downstream/modules/platform/proc-gw-allow-mapping.adoc
@@ -13,14 +13,8 @@ With allow mapping, you can control which users have access to the system by def
 . Select a *Trigger* from the list. See xref:gw-authenticator-map-triggers[Authenticator map triggers] for more information about map triggers.
 . Select *Revoke* to deny user access to the system when none of the trigger conditions are matched. 
 . Click btn:[Next].
-. You can manage the authentication mappings order by dragging and dropping the mapping up or down in the list. 
-+
-[NOTE]
-====
-The mapping precedence is determined by the order in which the mappings are listed. 
-====
-+
-. Click btn:[Next] to review and verify the mapping configurations.
-. Click btn:[Finish].
 
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-mapping-next-steps.adoc[]
 
