AAP-31874 - Reconciling content and minor formatting fixes

--- a/downstream/modules/platform/proc-controller-add-organization-user.adoc
+++ b/downstream/modules/platform/proc-controller-add-organization-user.adoc
@@ -23,7 +23,7 @@ include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 A user with associated roles retains them if they are reassigned to another organization.
 ====
 +
-. To remove a particular user from the organization, select *Remove user* from the {MoreActionsIcon} list next to the user. This launches a confirmation dialog, asking you to confirm the removal.
+. To remove a particular user from the organization, select *Remove user* from the *More actions {MoreActionsIcon}* list next to the user. This launches a confirmation dialog, asking you to confirm the removal.
 . To manage roles for users in an organization, click the *{SettingsIcon}* icon next to the user and select *Manage roles*. 
 
 
