--- a/downstream/modules/platform/proc-controller-set-up-SAML.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-SAML.adoc
@@ -19,7 +19,8 @@ SAML allows the exchange of authentication and authorization data between an Ide
 . Enter the entity ID returned in the assertion in the *Entity ID*. 
 .Enter user details in the *Groups*, *User Email*, *Username*, *User Last Name*, *User First Name* and *User Permanent ID* fields.  
 . The *SAML Assertion Consumer Service (ACS) URL* field registers the service as a service provider (SP) with each identity provider (IdP) you have configured. 
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
 . In the *SAML Service Provider Organization Info* field, provide the URL, display name, and the name of your app.
 +
