--- a/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
@@ -45,7 +45,12 @@ include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
 +
 . Click btn:[Next].
 
-[NOTE]
-====
-Team and organization mappings for OIDC are currently not supported. The OIDC adapter does authentication only and not authorization. It is only capable of authenticating whether this user is who they say they are. It does not authorize what this user is enabled to do. Configuring generic OIDC creates the UserID appended with an ID or key to differentiate the same user ID originating from two different sources and therefore, considered different users. So you get an ID of just the user name and the second is the username-<random number>.
-====
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc[]
+
+// [ddacosta - removed as no longer true in 2.5.]
+// [NOTE]
+// ====
+// Team and organization mappings for OIDC are currently not supported. The OIDC adapter does authentication only and not authorization. It is only capable of authenticating whether this user is who they say they are. It does not authorize what this user is enabled to do. Configuring generic OIDC creates the UserID appended with an ID or key to differentiate the same user ID originating from two different sources and therefore, considered different users. So you get an ID of just the user name and the second is the username-<random number>.
+// ====
