--- a/downstream/modules/platform/proc-gw-delete-organization.adoc
+++ b/downstream/modules/platform/proc-gw-delete-organization.adoc
@@ -18,5 +18,5 @@ When you attempt to delete items that are used by other resources, a message is 
 +
 [NOTE]
 ====
-You can delete multiple organizations by selecting the checkbox next to each organization you want to remove, and selecting *Delete selected organizations* from the {MoreActionsIcon} list on the menu bar.
+You can delete multiple organizations by selecting the checkbox next to each organization you want to remove, and selecting *Delete selected organizations* from the *More actions {MoreActionsIcon}* list on the menu bar.
 ====
