--- a/downstream/modules/platform/proc-gw-delete-team.adoc
+++ b/downstream/modules/platform/proc-gw-delete-team.adoc
@@ -14,5 +14,5 @@ Before you can delete a team, you must have team permissions. When you delete a 
 +
 [NOTE]
 ====
-You can delete multiple teams by selecting the checkbox next to each team you want to remove, and selecting *Delete teams* from the {MoreActionsIcon} list.
+You can delete multiple teams by selecting the checkbox next to each team you want to remove, and selecting *Delete teams* from the *More actions {MoreActionsIcon}* list.
 ====
