--- a/downstream/modules/platform/proc-gw-edit-authenticator.adoc
+++ b/downstream/modules/platform/proc-gw-edit-authenticator.adoc
@@ -11,7 +11,7 @@ You can modify the settings of previously configured authenticators from the *Au
 . From the navigation panel, select {MenuAMAuthentication}. 
 . In the list view, you can either:
 +
-.. Select the btn:image:leftpencil.png[Edit,15,15][Edit] icon next to authenticator you want to modify, or 
+.. Select the btn:[Edit] image:leftpencil.png[Edit,15,15] icon next to authenticator you want to modify, or 
 .. Select the authenticator name displayed in the *Name* column and click btn:[Edit authenticator] from the *Details* page.
 +
 . Modify the authentication details or mapping configurations as required.
