--- a/downstream/modules/platform/proc-gw-team-remove-user.adoc
+++ b/downstream/modules/platform/proc-gw-team-remove-user.adoc
@@ -12,7 +12,7 @@ You can remove a user from a team from the Team list view.
 . Select the team from which you want to remove users.
 . Select the *Users* tab.
 . Click the *Remove user* icon next to the user you want to remove as a member of the team.
-. You can delete multiple users by selecting the checkbox next to each user you want to remove, and selecting *Remove selected users* from the {MoreActionsIcon} list.
+. You can delete multiple users by selecting the checkbox next to each user you want to remove, and selecting *Remove selected users* from the *More actions {MoreActionsIcon}* list.
 +
 [NOTE]
 ====
