--- a/downstream/modules/platform/proc-controller-deleting-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-deleting-a-user.adoc
@@ -13,6 +13,6 @@ Before you can delete a user, you must have normal user or system administrator 
 +
 [NOTE]
 ====
-You can delete multiple users by selecting the checkbox next to each user you want to remove, and clicking *Delete users* from the {MoreActionsIcon} list. 
+You can delete multiple users by selecting the checkbox next to each user you want to remove, and clicking *Delete users* from the *More actions {MoreActionsIcon}* list. 
 ====
 
