--- a/downstream/modules/platform/proc-gw-add-team-organization.adoc
+++ b/downstream/modules/platform/proc-gw-add-team-organization.adoc
@@ -15,7 +15,7 @@ To add roles for a team, the role must already exist. See xref:proc-gw-create-ro
 . Click btn:[Add roles].
 . Select the roles you want the selected team to have. Scroll down for a complete list of roles.
 +
-include::snippets/snip-gw-roles-note-multiple-components.adoc
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Click btn:[Next] to review the roles settings.
 . Click btn:[Finish] to apply the roles to the selected teams. The Add roles dialog displays the updated roles assigned for each team.
