peer review feedback

--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -64,9 +64,9 @@ You can use {HubNameMain} to distribute the relevant {CertifiedColl}s to your us
 
 Before you can use a requirements file to install content, you must: 
 
-. xref:tbd[Configure a remote repository in your local hub]
-. xref:tbd [Obtain an automation hub API token]
-. xref:tbd [Use the hub API token to configure automation hub as a content source]
+. xref:proc-obtaining-org-collection-url[Obtain an automation hub API token]
+. xref:proc-set-rhcertified-remote.adoc[Use the API token to configure a remote repository in your local hub]
+. Then, xref:proc-create-requirements-file[Create a requirements file].
 
 include::assembly-syncing-to-cloud-repo.adoc[leveloffset=+1]
 include::assembly-synclists.adoc[leveloffset=+1]
