--- a/downstream/modules/hub/proc-create-namespace.adoc
+++ b/downstream/modules/hub/proc-create-namespace.adoc
@@ -3,18 +3,23 @@
 = Creating a namespace
 
 You can create a namespace to organize collections that your content developers upload to {HubName}.
-When creating a namespace, you can assign a group in {HubName} as owners of that namespace.
+When creating a namespace, you can assign a team in {HubName} as owners of that namespace.
 
 .Prerequisites
 
 * You have *Add Namespaces* and *Upload to Namespaces* permissions.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+
 . Log in to your {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces}.
-. Click btn:[Create] and enter a *namespace name*.
-. In the *Access* tab, click the btn:[Select a group] to assign a group of *Namespace owners* to the namespace.
-. Click btn:[Add].
+. Click btn:[Create namespace] and enter a *Name* for your namespace.
+. Optional: enter a description, company, logo URL, resources, or useful links in the appropriate fields.
+. Click btn: [Create namespace].
+. Select the *Team Access* tab and click btn:[Add roles] to assign roles to your namespace.
+. Select the team to which you want to grant a role, then click btn:[Next].
+. Select the roles you want to apply to the selected team, and then click btn:[Next].
+. Review your selections and click btn:[Finish].
+. Click btn:[Close] to complete the process.
 
-Your content developers can now upload collections to your new namespace and allow users in groups assigned as owners to upload collections.
+Your content developers can now upload collections to your new namespace and allow users in teams assigned as owners to upload collections.
