--- a/downstream/modules/hub/proc-create-requirements-file.adoc
+++ b/downstream/modules/hub/proc-create-requirements-file.adoc
@@ -7,24 +7,24 @@
 
 We recommend using a requirements file to add collections to your {HubName}. Requirements files are in YAML format and list the collections that you want to install in your {HubName}. After you create your requirements.yml file listing the collections you want to install, you will then run the install command to add the collections to your hub instance. 
 
-A standard 'requirements.yml' file contains the following parameters:
+A standard `requirements.yml` file contains the following parameters:
 
-* 'name': the name of the collection formatted as '<namespace>.<collection_name>'
-* 'version': the collection version number
+* `name`: the name of the collection formatted as `<namespace>.<collection_name>`
+* `version`: the collection version number
 
 .Procedure
 
 . Create your requirements file.
 +
 In YAML format, collection information in your requirements file should look like this:
-
++
 [source,bash]
 ----
 collections:
  name: namespace.collection_name
  version: 1.0.0
 ----
-
++
 . After you have created your requirements file listing information for each collection that you want to install, navigate to the directory where the file is located and run the following command:
 
 [source,bash]
