--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -27,7 +27,7 @@ For further information about required RAM and CPU levels, see link:{BaseURL}/re
 
 Control nodes process events and run cluster jobs including project updates and cleanup jobs. Increasing CPU and memory can help with job event processing.
 
-Control nodes have the following storage requirements:
+//Control nodes have the following storage requirements:
 
 * 40GB minimum with at least 20GB available under /var/lib/awx
 * Storage volume must be rated for a minimum baseline of 1500 IOPS
