--- a/downstream/assemblies/platform/assembly-platform-install-overview.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-overview.adoc
@@ -31,7 +31,7 @@ xref:proc-verify-aap-installation_platform-install-scenario[Verifying your {Plat
 [role="_additional-resources"]
 .Additional resources
 
-. For more information about the supported installation scenarios, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/index[{PlatformName} Planning Guide].
+. For more information about the supported installation scenarios, see the link:{LinkPlanningGuide}.
 . For more information on available topologies, see link:{LinkTopologies}. 
 
 include::platform/con-aap-installation-prereqs.adoc[leveloffset=+1]
