--- a/downstream/modules/platform/con-install-scenario-recommendations.adoc
+++ b/downstream/modules/platform/con-install-scenario-recommendations.adoc
@@ -7,7 +7,7 @@ Before selecting your installation method for {PlatformNameShort}, review the fo
 
 // Removed for AAP-20847 and until such time as a decision is made regarding database support.
 //* Internal databases `[database]` are not supported. See the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/containerized_ansible_automation_platform_installation_guide/index[Containerized {PlatformName} Installation Guide] for further information on using the containerized installer for environments requiring a monolithc deployment. 
-* Provide a reachable IP address or fully qualified domain name (FQDN) for the `[automationhub]` and `[automationcontroller]` hosts to ensure users can sync and install content from {HubName} from a different node.
+* Provide a reachable IP address or fully qualified domain name (FQDN) for hosts to ensure users can sync and install content from {HubName} from a different node.
 +
 The FQDN must not contain either the `-` or the `_` symbols, as it will not be processed correctly. 
 +
