--- a/downstream/modules/platform/ref-system-requirements.adoc
+++ b/downstream/modules/platform/ref-system-requirements.adoc
@@ -17,7 +17,7 @@ See, link:{LinkTopologies} for more information on topology options.
 
 h| Subscription | Valid {PlatformName} |
 
-h| OS | {RHEL} 8.8 or later for {RHEL} 8 and 9.2 or later for {RHEL} 9 64-bit (x86, ppc64le, s390x, aarch64) |{PlatformName} is also supported on OpenShift, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/deploying_the_red_hat_ansible_automation_platform_operator_on_openshift_container_platform/index[Deploying the {PlatformName} operator on {OCPShort}] for more information.
+h| OS | {RHEL} 9.2 or later x86_64 aarch64 |{PlatformName} is also supported on OpenShift, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/deploying_the_red_hat_ansible_automation_platform_operator_on_openshift_container_platform/index[Deploying the {PlatformName} operator on {OCPShort}] for more information.
 
 h| Ansible-core | Ansible-core version {CoreInstVers} or later | {PlatformNameShort} uses the system-wide ansible-core package to install the platform, but uses ansible-core {CoreUseVers} for both its control plane and built-in execution environments.
 
